--- a/site/style1.css
+++ b/site/style1.css
@@ -1,6 +1,8 @@
+
+
 body{ 
   background-color: purple;
-  
+  overflow: scroll;
 }
 
 .sorces{
@@ -18,21 +20,25 @@ body{
 
 }
 
+#soc{
+	top :40%;
+	right :25%;
+	position: absolute;
+	
 
-#block_news {
-   width: 3200px;
-   height: 1000px;
-   bottom: -400px;
-   left: 350px;
-   position: fixed;
   
-   bottom: -540px;
-   position: relative;
   
-   
-  background-color:  white;
- 
 }
+
+#soc1{
+	top :90%;
+
+	right: 25% ;
+	position: absolute;
+
+}
+
+
 header {
 width:100%;
 display: block;
@@ -43,10 +49,10 @@ text-align: center;
  
 }
 footer {
-  width: 100%
+  width: 100%;
   display :100%;
   height: 200px;
-  background-color: gold;
+  background-color: black;
   font-family: Arial; 
 }
 
