--- a/site/style1.css
+++ b/site/style1.css
@@ -3,11 +3,12 @@
 body{ 
   background-color: purple;
   overflow: scroll;
+
 }
 
 .sorces{
  width:100%
- display :100%;
+
  height: 540px;
  background: black ;
 }
@@ -24,7 +25,7 @@ body{
 	top :40%;
 	right :25%;
 	position: absolute;
-	
+ 
 
   
   
@@ -35,16 +36,32 @@ body{
 
 	right: 25% ;
 	position: absolute;
+position: center;
+	display: 100%;
+
+
+}
+.button {
+	margin: 100px;
 
 }
 
+.button a{
+	text-decoration : none;
+	font-size :40px;
+	font-family: monospace;
+	background-color: red;
+	padding: 10px 30px;
+	color : white;
+	top :640px;
+}
 
 header {
 width:100%;
 display: block;
-height: 540px;
+height: 490px;
 background: black ;
-position: fixed;
+position: absolute;
 text-align: center;
  
 }
